# Bicas-En-La-UTEC

./: CMakeLists.txt  Controller.cpp  Controller.h  README.md  main.cpp
Persona/: Persona.cpp  Persona.h
Scenes/: Scenes.cpp  Scenes.h
Scenes/Auditorio/Include/: Auditorio.cpp  Auditorio.h
Scenes/BossScreen/Include/: BossScreen.cpp  BossScreen.h
Scenes/CharacterSelect/Include/: CharacterSelect.cpp  CharacterSelect.h
Scenes/Defeat/Include/: Defeat.cpp  Defeat.h
Scenes/FightScreen/Include/: FightScreen.cpp  FightScreen.h
Scenes/Introduction/Include/: Introduction.cpp  Introduction.h
Scenes/Piso1/Include/: Piso1.cpp  Piso1.h
Scenes/StatScreen/Include/: StatScreen.cpp  StatScreen.h
Scenes/Transition/Include/: Transition.cpp  Transition.h
Scenes/Win/Include/: Win.cpp  Win.h
Util/: GenerarPersonaje.cpp  GenerarPersonaje.h
